# codex-provider-switcher

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CodeXProviderSwitcher.cmd  CodeXProviderSwitcher.ps1  LICENSE  README.md  SECURITY.md  STRUCTURE.md  SUPPORT.md  SignalmanAI.cmd  SignalmanAI.ps1  index.html  package-lock.json  package.json  setup.cmd  setup.ps1  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  security-risk-register.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  store-package.yml
docs/: README.md  product-spec.md
docs/contributing/: development-and-prs.zh.md
docs/maintainers/: dependency-security.zh.md  legacy-cutover.zh.md  release-and-delivery.zh.md
docs/reference/: brand-and-compatibility.zh.md  github-store-dual-channel-delivery-plan-2026-07-23.zh.md  product-spec.zh.md  repository-structure.zh.md
docs/release/: README.md  github-publish-runbook.md  installer-and-child-process-archaeology-2026-07-16.md  legacy-cutover-handoff.zh.md  microsoft-store-first-submission.zh.md  release-checklist.md  release-notes-0.1.0-alpha.md  release-notes-0.2.0-alpha.md  release-notes-0.3.0-alpha.md  release-notes-0.3.1-alpha.md  release-notes-0.3.2-alpha.md  release-notes-0.4.0-alpha.md  release-notes-0.4.1-alpha.md  release-notes-0.5.0-alpha.md  release-notes-0.6.0-alpha.md  release-notes-0.7.0-alpha.md  release-notes-0.8.0-alpha.md  release-notes-0.9.0-alpha.md
docs/user/: installation.zh.md  privacy-policy.zh.md  troubleshooting.zh.md
scripts/: README.md  local-backend-functional-smoke.mjs  local-backend-smoke.mjs  local-backend-ui-smoke.mjs  qa-smoke.mjs  runtime-boundary-smoke.mjs  start-preview.ps1  stop-preview.ps1  tauri-desktop-boundary-smoke.mjs
scripts/qa/: cutover-preflight.ps1  prepare-install-release-qa.ps1  prepare-local-install-migration.ps1  prepare-updater-release-qa.ps1  refresh-local-candidate.ps1  run-preview-smoke.ps1  stable-install.ps1  start-dev-desktop.ps1
scripts/release/: build-codex-provider-switcher-release.ps1  build-store-msix.ps1  capture-store-listing-assets.mjs  generate-installer-assets.ps1  prepare-store-listing-assets.ps1  publish-github-release-asset.ps1  publish-github-release-from-artifact.ps1  release-channel-smoke.mjs  verify-github-release-asset.ps1  verify-local-release-package.ps1  verify-release-upload-assets.ps1
scripts/verify/: doctor-codex-provider-switcher.ps1  release-readiness-behavior-smoke.ps1  release-readiness.ps1  (+1 more)
src/: App.css  App.tsx  adapter.ts  index.css  mockData.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/store/: Package.appxmanifest
(+1 files in other folders)
