[package]
name = "codex-provider-switcher"
version = "0.3.2-alpha"
description = "CodeX Provider Switcher for Codex Desktop"
authors = ["OpenAI Codex"]
edition = "2021"
default-run = "codex-provider-switcher"

[lib]
name = "codex_switcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
toml = "0.9"
